# swarm-deployer

./: Cargo.toml  Dockerfile  README.md  ecr-events.yml
.github/workflows/: main.yml
integration/: Dockerfile  publish-image.sh  repository.yml
src/: events.rs  main.rs  sqs.rs
src/tests/: events.rs  mod.rs
swarm/: aws_credentials  swarm-ecr-deployer.yml
