[package]
name = "swarm-ecr-deployer"
version = "0.1.0"
authors = ["Quest <quest@lysator.liu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
bollard = { git = "https://github.com/fussybeaver/bollard", branch = "ND-services-support" }
chrono = "0.4.10"
futures = "0.3.4"
log = "*"
rusoto_core = "0.42.0"
rusoto_ecr = "0.42.0"
rusoto_sqs = "0.42.0"
serde_json = "*"
snafu = "*"
stderrlog = "*"
structopt = "*"
tokio = "*"
