[package]
name = "swarm-ecr-deployer"
version = "0.1.0"
authors = ["Quest <quest@lysator.liu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "~0.11"
bollard = { git = "https://github.com/fussybeaver/bollard", branch = "ND-services-support" }
chrono = "~0.4"
futures = "~0.3"
log = "~0.4"
rusoto_core = "~0.43"
rusoto_ecr = "~0.43"
rusoto_sqs = "~0.43"
serde_json = "~1.0"
snafu = "~0.6"
stderrlog = "~0.4"
structopt = "~0.3"
tokio = { version = "~0.2", features = ["rt-threaded", "macros"] }
